@@ -78,6 +78,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22958: Constructor and update method of weakref.WeakValueDictionary
+  now accept the self and the dict keyword arguments.
+
 - Issue #22609: Constructor of collections.UserDict now accepts the self keyword
   argument.
 
